corrected form input spacing issue

--- a/src/components/ContactForm/ContactForm.css
+++ b/src/components/ContactForm/ContactForm.css
@@ -53,7 +53,7 @@
   padding: 0;
   box-sizing: border-box;
   gap: 30px;
-  max-width: 372px;
+  max-width: 450px;
 }
 
 .form__header {
@@ -65,11 +65,12 @@
 .form__input-box {
   position: relative;
   align-self: center;
+  width: 450px;
 }
 
 .form__input {
   padding: 10px 0 10px 10px;
-  width: 328px;
+  width: calc(100% - 10px);
   border: 1px solid black;
   background-color: transparent;
   border-radius: 5px;
